--- a/book_service/Dockerfile
+++ b/book_service/Dockerfile
@@ -6,16 +6,7 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy all Python files explicitly
-COPY main.py .
-COPY db.py .
-COPY models.py .
-COPY routes.py .
-COPY schemas.py .
-COPY utils/ ./utils/
-
-# Add debugging
-RUN ls -la /app
+COPY . .
 
 # Run the application
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8001", "--reload"] 
