--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,11 @@ jobs:
         with:
           python-version: '3.12'
 
+      - name: Install Docker Compose v2.35.1
+        run: |
+          sudo curl -SL "https://github.com/docker/compose/releases/download/v2.35.1/docker-compose-linux-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+
       - name: Install Flake8
         run: pip install flake8
 
@@ -35,7 +40,7 @@ jobs:
         run: flake8 --config=${{ matrix.service }}/.flake8 ${{ matrix.service }}/
 
       - name: Build Docker images with Docker Compose
-        run: docker-compose build ${{ matrix.service }}
+        run: docker compose build ${{ matrix.service }}
 
       - name: Run Pytest for ${{ matrix.service }}
         run: |
