--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
         run: flake8 --config=${{ matrix.service }}/.flake8 ${{ matrix.service }}/
 
       - name: Build Docker images with Docker Compose
-        run: docker compose build ${{ matrix.service }}
+        run: docker compose up -d --build ${{ matrix.service }}
 
       - name: Run Pytest for ${{ matrix.service }}
         run: |
