--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - .:/app
     working_dir: /app
     command: >
-      bash -c "chmod +x setup_requirements.sh && ./setup_requirements.sh"
+      bash -c "chmod +x /app/setup_requirements.sh && /app/setup_requirements.sh"
 
   # Database
   postgres:
